5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1671_1105.log
== TEST (2019-04-19 01:29:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("animal do brasao: ")

print("Entrada: ", brasao)
-- OUTPUT:
Entrada:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:39:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Casa: Stark"
elif brasao == "leao":
	casa = "Casa: Lannister"
elif brasao == "veado":
	casa = "Casa: Baratheon"
elif brasao == "dragao":
	casa = "Casa: Targaryen"
elif brasao == "rosa":
	casa = "Casa: Tyrell"
elif brasao == "sol":
	casa = "Casa: Martell"
elif brasao == "lula":
	casa = "Casa:Greyjoy"
elif brasao == "esfolado":
	casa = "Casa: Bolton"
elif brasao == "turta":
	casa = "Casa: Tully"
else:
	casa = "Brasao Invalido"

print(casa)
-- OUTPUT:
Entrada:  lula
Casa:Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:39:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Casa: Stark"
elif brasao == "leao":
	casa = "Casa: Lannister"
elif brasao == "veado":
	casa = "Casa: Baratheon"
elif brasao == "dragao":
	casa = "Casa: Targaryen"
elif brasao == "rosa":
	casa = "Casa: Tyrell"
elif brasao == "sol":
	casa = "Casa: Martell"
elif brasao == "lula":
	casa = "Casa:Greyjoy"
elif brasao == "esfolado":
	casa = "Casa: Bolton"
elif brasao == "turta":
	casa = "Casa: Tully"
else:
	casa = "Brasao Invalido"

print(casa)
-- OUTPUT:
Entrada:  lula
Casa:Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:39:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Casa: Stark"
elif brasao == "leao":
	casa = "Casa: Lannister"
elif brasao == "veado":
	casa = "Casa: Baratheon"
elif brasao == "dragao":
	casa = "Casa: Targaryen"
elif brasao == "rosa":
	casa = "Casa: Tyrell"
elif brasao == "sol":
	casa = "Casa: Martell"
elif brasao == "lula":
	casa = "Casa:Greyjoy"
elif brasao == "esfolado":
	casa = "Casa: Bolton"
elif brasao == "turta":
	casa = "Casa: Tully"
else:
	casa = "Brasao Invalido"

print(casa)
-- EXECUTION TIME:
0.131166
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:42:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Stark"
	print("Casa: ", casa)
elif brasao == "leao":
	casa = "Lannister"
	print("Casa: ", casa)
elif brasao == "veado":
	casa = "Baratheon"
	print("Casa: ", casa)
elif brasao == "dragao":
	casa = "Targaryen"
	print("Casa: ", casa)
elif brasao == "rosa":
	casa = "Tyrell"
	print("Casa: ", casa)
elif brasao == "sol":
	casa = "Martell"
	print("Casa: ", casa)
elif brasao == "lula":
	casa = "Greyjoy"
	print("Casa: ", casa)
elif brasao == "esfolado":
	casa = "Bolton"
	print("Casa: ", casa)
elif brasao == "turta":
	casa = "Tully"
	print("Casa: ", casa)
else:
	casa = "Brasao Invalido"
	print(casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:42:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Stark"
	print("Casa: ", casa)
elif brasao == "leao":
	casa = "Lannister"
	print("Casa: ", casa)
elif brasao == "veado":
	casa = "Baratheon"
	print("Casa: ", casa)
elif brasao == "dragao":
	casa = "Targaryen"
	print("Casa: ", casa)
elif brasao == "rosa":
	casa = "Tyrell"
	print("Casa: ", casa)
elif brasao == "sol":
	casa = "Martell"
	print("Casa: ", casa)
elif brasao == "lula":
	casa = "Greyjoy"
	print("Casa: ", casa)
elif brasao == "esfolado":
	casa = "Bolton"
	print("Casa: ", casa)
elif brasao == "turta":
	casa = "Tully"
	print("Casa: ", casa)
else:
	casa = "Brasao Invalido"
	print(casa)
-- EXECUTION TIME:
0.155149
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:43:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Stark"
elif brasao == "leao":
	casa = "Lannister"
elif brasao == "veado":
	casa = "Baratheon"
elif brasao == "dragao":
	casa = "Targaryen"
elif brasao == "rosa":
	casa = "Tyrell"
elif brasao == "sol":
	casa = "Martell"
elif brasao == "lula":
	casa = "Greyjoy"
elif brasao == "esfolado":
	casa = "Bolton"
elif brasao == "turta":
	casa = "Tully"
else:
	casa = "Brasao Invalido"
	
print("Casa: ", casa)
-- EXECUTION TIME:
0.15081
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:00:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Stark"
elif brasao == "leao":
	casa = "Lannister"
elif brasao == "veado":
	casa = "Baratheon"
elif brasao == "dragao":
	casa = "Targaryen"
elif brasao == "rosa":
	casa = "Tyrell"
elif brasao == "sol":
	casa = "Martell"
elif brasao == "lula":
	casa = "Greyjoy"
elif brasao == "esfolado":
	casa = "Bolton"
elif brasao == "turta":
	casa = "Tully"
else:
	casa = "Brasao Invalido"
	
print("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:01:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Stark"
elif brasao == "leao":
	casa = "Lannister"
elif brasao == "veado":
	casa = "Baratheon"
elif brasao == "dragao":
	casa = "Targaryen"
elif brasao == "rosa":
	casa = "Tyrell"
elif brasao == "sol":
	casa = "Martell"
elif brasao == "lula":
	casa = "Greyjoy"
elif brasao == "esfolado":
	casa = "Bolton"
elif brasao == "turta":
	casa = "Tully"
else:
	casa = "Brasao Invalido"
	
print("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:01:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)

if brasao == "lobo":
	casa = "Stark"
elif brasao == "leao":
	casa = "Lannister"
elif brasao == "veado":
	casa = "Baratheon"
elif brasao == "dragao":
	casa = "Targaryen"
elif brasao == "rosa":
	casa = "Tyrell"
elif brasao == "sol":
	casa = "Martell"
elif brasao == "lula":
	casa = "Greyjoy"
elif brasao == "esfolado":
	casa = "Bolton"
elif brasao == "turta":
	casa = "Tully"
else:
	casa = "Brasao Invalido"
	
print("Casa: ", casa)
-- EXECUTION TIME:
0.121624
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:05:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("brasao: ")

print("Entrada: ", brasao)
	
print("Casa: ", casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Casa: ", casa)
NameError: name 'casa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:20:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a and b and c and d and e and f and g and h and i):
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:21:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	print("Brasao invalido")
else:
	print("continue")
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:21:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	print("Brasao invalido")
else:
	print("continue")
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:31:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	print("Brasao invalido")
else:
	elif X == a:
		Y = "Stark"
-- ERROR:
File "XXXX", line 20
    elif X == a:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:31:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	print("Brasao invalido")
elif X == a:
		Y = "Stark"
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:41:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	Y = "Brasao invalido"
elif X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
else:
	Y = "Tully"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:43:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	Y = "Brasao invalido"
elif X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
else:
	Y = "Tully"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:43:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	Y = "Brasao invalido"
elif X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
else:
	Y = "Tully"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- EXECUTION TIME:
0.157287
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Brasao invalido
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Brasao invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:43:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	Y = "Brasao invalido"
elif X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
else:
	Y = "Tully"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:44:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	Y = "Brasao invalido"
elif X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
else:
	Y = "Tully"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:44:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	Y = "Brasao invalido"
elif X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
else:
	Y = "Tully"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:45:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X != (a or b or c or d or e or f or g or h or i):
	Y = "Brasao invalido"
elif X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
else:
	Y = "Tully"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:47:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:47:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:47:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- EXECUTION TIME:
0.13592
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:48:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:48:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:48:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:48:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:49:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:49:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
elif X == b:
	Y = "Lannister"
elif X == c:
	Y = "Baratheon"
elif X == d:
	Y = "Targaryen"
elif X == e:
	Y = "Tyrell"
elif X == f:
	Y = "Martell"
elif X == g:
	Y = "Greyjoy"
elif X == h:
	Y = "Bolton"
elif X == g:
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- EXECUTION TIME:
0.125209
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:50:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
	print("Casa: ",Y)
elif X == b:
	Y = "Lannister"
	print("Casa: ",Y)
elif X == c:
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == d:
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == e:
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == f:
	Y = "Martell"
	print("Casa: ",Y)
elif X == g:
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == h:
	Y = "Bolton"
	print("Casa: ",Y)
elif X == g:
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:51:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
	print("Casa: ",Y)
elif X == b:
	Y = "Lannister"
	print("Casa: ",Y)
elif X == c:
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == d:
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == e:
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == f:
	Y = "Martell"
	print("Casa: ",Y)
elif X == g:
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == h:
	Y = "Bolton"
	print("Casa: ",Y)
elif X == g:
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:51:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
	print("Casa: ",Y)
elif X == b:
	Y = "Lannister"
	print("Casa: ",Y)
elif X == c:
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == d:
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == e:
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == f:
	Y = "Martell"
	print("Casa: ",Y)
elif X == g:
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == h:
	Y = "Bolton"
	print("Casa: ",Y)
elif X == g:
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- EXECUTION TIME:
0.150034
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:53:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == a:
	Y = "Stark"
	print("Casa: ",Y)
elif X == b:
	Y = "Lannister"
	print("Casa: ",Y)
elif X == c:
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == d:
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == e:
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == f:
	Y = "Martell"
	print("Casa: ",Y)
elif X == g:
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == h:
	Y = "Bolton"
	print("Casa: ",Y)
elif X == g:
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:05:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == "lobo":
	Y = "Stark"
	print("Casa: ",Y)
elif X == "leao":
	Y = "Lannister"
	print("Casa: ",Y)
elif X == "veado":
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == "dragao":
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == "rosa":
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == "sol":
	Y = "Martell"
	print("Casa: ",Y)
elif X == "lula":
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == "esfolado":
	Y = "Bolton"
	print("Casa: ",Y)
elif X == "turta":
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:05:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

a = "lobo"
b = "leao"
c = "veado"
d = "dragao"
e = "rosa"
f = "sol"
g = "lula"
h = "esfolado"
i = "turta"

if X == "lobo":
	Y = "Stark"
	print("Casa: ",Y)
elif X == "leao":
	Y = "Lannister"
	print("Casa: ",Y)
elif X == "veado":
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == "dragao":
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == "rosa":
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == "sol":
	Y = "Martell"
	print("Casa: ",Y)
elif X == "lula":
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == "esfolado":
	Y = "Bolton"
	print("Casa: ",Y)
elif X == "turta":
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:06:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
	print("Casa: ",Y)
elif X == "leao":
	Y = "Lannister"
	print("Casa: ",Y)
elif X == "veado":
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == "dragao":
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == "rosa":
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == "sol":
	Y = "Martell"
	print("Casa: ",Y)
elif X == "lula":
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == "esfolado":
	Y = "Bolton"
	print("Casa: ",Y)
elif X == "turta":
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- EXECUTION TIME:
0.141614
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:24:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
	print("Casa: ",Y)
elif X == "leao":
	Y = "Lannister"
	print("Casa: ",Y)
elif X == "veado":
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == "dragao":
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == "rosa":
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == "sol":
	Y = "Martell"
	print("Casa: ",Y)
elif X == "lula":
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == "esfolado":
	Y = "Bolton"
	print("Casa: ",Y)
elif X == "turta":
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- EXECUTION TIME:
0.164745
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:24:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
	print("Casa: ",Y)
elif X == "leao":
	Y = "Lannister"
	print("Casa: ",Y)
elif X == "veado":
	Y = "Baratheon"
	print("Casa: ",Y)
elif X == "dragao":
	Y = "Targaryen"
	print("Casa: ",Y)
elif X == "rosa":
	Y = "Tyrell"
	print("Casa: ",Y)
elif X == "sol":
	Y = "Martell"
	print("Casa: ",Y)
elif X == "lula":
	Y = "Greyjoy"
	print("Casa: ",Y)
elif X == "esfolado":
	Y = "Bolton"
	print("Casa: ",Y)
elif X == "turta":
	Y = "Tully"
	print("Casa: ",Y)
else:
	Y = "Brasao Invalido"
	print(Y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:34:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao Invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- EXECUTION TIME:
0.183909
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:00:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao Invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:09:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao Invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:09:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao Invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- EXECUTION TIME:
0.162969
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:11:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao Invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:11:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao Invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:11:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y != "Brasao invalido":
	print("Casa: ",Y)
else:
	print(Y)
-- EXECUTION TIME:
0.1408
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:32:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ")

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- EXECUTION TIME:
0.251304
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:33:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ").lower()

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:33:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ").lower()

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- EXECUTION TIME:
0.206235
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:39:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("descricao do brasao: ").

print("Entrada: ", X)

if X == "lobo":
	Y = "Stark"
elif X == "leao":
	Y = "Lannister"
elif X == "veado":
	Y = "Baratheon"
elif X == "dragao":
	Y = "Targaryen"
elif X == "rosa":
	Y = "Tyrell"
elif X == "sol":
	Y = "Martell"
elif X == "lula":
	Y = "Greyjoy"
elif X == "esfolado":
	Y = "Bolton"
elif X == "turta":
	Y = "Tully"
else:
	Y = "Brasao Invalido"

if Y == "Brasao invalido":
	print(Y)
else:
	print("Casa: ",Y)
-- EXECUTION TIME:
0.187637
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 3
    X = input().
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:42:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("descricao do brasao: ").

print("Entrada: ", x)

if x == "lobo":
	y = "Stark"
elif x == "leao":
	y = "Lannister"
elif x == "veado":
	y = "Baratheon"
elif x == "dragao":
	y = "Targaryen"
elif x == "rosa":
	y = "Tyrell"
elif x == "sol":
	y = "Martell"
elif x == "lula":
	y = "Greyjoy"
elif x == "esfolado":
	y = "Bolton"
elif x == "turta":
	y = "Tully"
else:
	y = "Brasao invalido"

if y == "Brasao invalido":
	print(y)
else:
	print("Casa: ",y)
-- EXECUTION TIME:
0.143404
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 3
    x = input().
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:46:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("descricao do brasao: ").

print("Entrada: ", x)

if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
else:
	y = "Brasao invalido"

if y == "Brasao invalido":
	print(y)
else:
	print("Casa: ",y)
-- ERROR:
File "XXXX", line 3
    x = input().
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:44:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("descricao do brasao: ")

print("Entrada: ", x)

if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
else:
	y = "Brasao invalido"

if y == "Brasao invalido":
	print(y)
else:
	print("Casa: ",y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:44:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("descricao do brasao: ")

print("Entrada: ", x)

if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
else:
	y = "Brasao invalido"

if y == "Brasao invalido":
	print(y)
else:
	print("Casa: ",y)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:44:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("descricao do brasao: ")

print("Entrada: ", x)

if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
else:
	y = "Brasao invalido"

if y == "Brasao invalido":
	print(y)
else:
	print("Casa: ",y)
-- EXECUTION TIME:
0.210827
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
